# GPT-Trade

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  PUBLISHING_PLAN.md  PYENV_SETUP.md  README.md  README_GPT_TRADER.md  edgar_companies.py  edgar_fetcher.py  edgar_files.py  edgar_monitor.py  gpt_trader.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.claude/: settings.local.json
.claude/agents/: python-expert.md
.github/: dependabot.yml
.github/workflows/: test.yml
CLAUDEmd/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  FINAL_MIGRATION_REPORT.md  Issues.md  MIGRATION.md  MIGRATION_STATUS.md
DOCS/: gpt_trader_project_requirements.md
config/: apple_config.json  database_config.json  database_config_postgres.json  database_env_example.txt
database/: alembic.ini  config.py  models.py  performance_optimization.sql  schema.sql
database/migrations/: env.py
database/migrations/versions/: 20240127_001_initial_schema.py  20240127_002_create_indexes.py  20240127_003_create_triggers_and_functions.py
edgar/: __init__.py  client.py  client_new.py  companies.py  config.py  config_manager.py  database.py  database_config.py  database_errors.py  database_health.py  database_manager.py  database_migrations.py  database_models.py  database_session.py  duplicate_detection.py  enhanced_filing_processor.py  filing_processor.py  filings.py  job_orchestrator.py  logging_config.py  parser.py  performance_monitor.py  progress.py  s3_manager.py  s3util.py  state.py  urls.py
examples/: apple_manifest.json  async_filing_example.py
gpt_trader/: __init__.py  config.py  database.py  etl.py  filing_processor_db.py  models.py  monitoring.py
orchestration/: __init__.py  cli.py  orchestrator.py  performance.py  progress.py  resource_manager.py  scheduler.py
scripts/: companies.py  fetch_10k.py  fetch_10k_new.py  gpt_trader_cli.py  list_files.py  list_files_new.py  monitor.py  monitor_new.py
scripts/config/: config.json
tests/: conftest.py  test_companies.py  test_database_integration.py  test_database_models.py  test_e2e_workflow.py  test_enhanced_filing_processor.py  test_etl_pipeline.py  test_filing_processor.py  test_filings.py  test_gpt_trader_etl.py  test_gpt_trader_models.py  test_parser.py  test_performance.py  test_refactored_components.py  test_state.py
